src/generated/ToLLVMParser.cpp

// Generated from /home/carlos/projects/cpp/tollvm/grammar/ToLLVMParser.g4 by ANTLR 4.13.2


#include "ToLLVMParserVisitor.h"

#include "ToLLVMParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct ToLLVMParserStaticData final {
  ToLLVMParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  ToLLVMParserStaticData(const ToLLVMParserStaticData&) = delete;
  ToLLVMParserStaticData(ToLLVMParserStaticData&&) = delete;
  ToLLVMParserStaticData& operator=(const ToLLVMParserStaticData&) = delete;
  ToLLVMParserStaticData& operator=(ToLLVMParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag tollvmparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<ToLLVMParserStaticData> tollvmparserParserStaticData = nullptr;

void tollvmparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (tollvmparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(tollvmparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<ToLLVMParserStaticData>(
    std::vector<std::string>{
      "program", "namespaceDecl", "useDecl", "modulePath", "includeDecl", 
      "topLevelDecl", "typeAliasDecl", "enumDecl", "structDecl", "structField", 
      "unionDecl", "unionField", "externDecl", "externParamList", "externParam", 
      "functionDecl", "extendDecl", "extendMethod", "paramList", "param", 
      "block", "statement", "deferStmt", "exprStmt", "varDeclStmt", "assignStmt", 
      "compoundAssignStmt", "fieldAssignStmt", "indexFieldAssignStmt", "derefAssignStmt", 
      "arrowAssignStmt", "arrowCompoundAssignStmt", "callStmt", "argList", 
      "returnStmt", "ifStmt", "elseIfClause", "elseClause", "forStmt", "breakStmt", 
      "continueStmt", "loopStmt", "whileStmt", "doWhileStmt", "lockStmt", 
      "tryCatchStmt", "catchClause", "finallyClause", "throwStmt", "switchStmt", 
      "caseClause", "defaultClause", "expression", "typeSpec", "fnTypeSpec", 
      "primitiveType"
    },
    std::vector<std::string>{
      "", "'namespace'", "'use'", "'ret'", "'struct'", "'union'", "'enum'", 
      "'null'", "'fn'", "'type'", "'as'", "'is'", "'sizeof'", "'typeof'", 
      "'if'", "'else'", "'for'", "'in'", "'loop'", "'while'", "'do'", "'break'", 
      "'continue'", "'switch'", "'case'", "'default'", "'spawn'", "'await'", 
      "'lock'", "'extend'", "'try'", "'catch'", "'finally'", "'throw'", 
      "'defer'", "'extern'", "'->'", "", "", "'\\u003F\\u003F'", "'...'", 
      "'..='", "'..'", "'int1'", "'int8'", "'int16'", "'int32'", "'int64'", 
      "'int128'", "'intinf'", "'isize'", "'uint1'", "'uint8'", "'uint16'", 
      "'uint32'", "'uint64'", "'uint128'", "'usize'", "'float32'", "'float64'", 
      "'float80'", "'float128'", "'double'", "'bool'", "'char'", "'void'", 
      "'string'", "'cstring'", "", "", "", "", "", "", "", "'+='", "'-='", 
      "'*='", "'/='", "'%='", "'&='", "'|='", "'^='", "'<<='", "'>>='", 
      "';'", "':'", "'::'", "','", "'.'", "'='", "'('", "')'", "'{'", "'}'", 
      "'['", "']'", "'*'", "'&'", "'-'", "'+'", "'/'", "'%'", "'=='", "'!='", 
      "'<='", "'>='", "'<'", "'>'", "'&&'", "'||'", "'!'", "'++'", "'--'", 
      "'<<'", "'>>'", "'|'", "'^'", "'~'", "'\\u003F'"
    },
    std::vector<std::string>{
      "", "NAMESPACE", "USE", "RET", "STRUCT", "UNION", "ENUM", "NULL_LIT", 
      "FN", "TYPE", "AS", "IS", "SIZEOF", "TYPEOF", "IF", "ELSE", "FOR", 
      "IN", "LOOP", "WHILE", "DO", "BREAK", "CONTINUE", "SWITCH", "CASE", 
      "DEFAULT", "SPAWN", "AWAIT", "LOCK", "EXTEND", "TRY", "CATCH", "FINALLY", 
      "THROW", "DEFER", "EXTERN", "ARROW", "INCLUDE_SYS", "INCLUDE_LOCAL", 
      "NULLCOAL", "SPREAD", "RANGE_INCL", "RANGE", "INT1", "INT8", "INT16", 
      "INT32", "INT64", "INT128", "INTINF", "ISIZE", "UINT1", "UINT8", "UINT16", 
      "UINT32", "UINT64", "UINT128", "USIZE", "FLOAT32", "FLOAT64", "FLOAT80", 
      "FLOAT128", "DOUBLE", "BOOL", "CHAR", "VOID", "STRING", "CSTRING", 
      "INT_LIT", "FLOAT_LIT", "BOOL_LIT", "C_STR_LIT", "STR_LIT", "CHAR_LIT", 
      "IDENTIFIER", "PLUS_ASSIGN", "MINUS_ASSIGN", "STAR_ASSIGN", "SLASH_ASSIGN", 
      "PERCENT_ASSIGN", "AMP_ASSIGN", "PIPE_ASSIGN", "CARET_ASSIGN", "LSHIFT_ASSIGN", 
      "RSHIFT_ASSIGN", "SEMI", "COLON", "SCOPE", "COMMA", "DOT", "ASSIGN", 
      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "STAR", 
      "AMPERSAND", "MINUS", "PLUS", "SLASH", "PERCENT", "EQ", "NEQ", "LTE", 
      "GTE", "LT", "GT", "LAND", "LOR", "NOT", "INCR", "DECR", "LSHIFT", 
      "RSHIFT", "PIPE", "CARET", "TILDE", "QUESTION", "WS", "LINE_COMMENT", 
      "BLOCK_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  tollvmparserParserStaticData = std::move(staticData);
}

}

ToLLVMParser::ToLLVMParser(TokenStream *input) : ToLLVMParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

ToLLVMParser::ToLLVMParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  ToLLVMParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *tollvmparserParserStaticData->atn, tollvmparserParserStaticData->decisionToDFA, tollvmparserParserStaticData->sharedContextCache, options);
}

ToLLVMParser::~ToLLVMParser() {
  delete _interpreter;
}

const atn::ATN& ToLLVMParser::getATN() const {
  return *tollvmparserParserStaticData->atn;
}

std::string ToLLVMParser::getGrammarFileName() const {
  return "ToLLVMParser.g4";
}

const std::vector<std::string>& ToLLVMParser::getRuleNames() const {
  return tollvmparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& ToLLVMParser::getVocabulary() const {
  return tollvmparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView ToLLVMParser::getSerializedATN() const {
  return tollvmparserParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

ToLLVMParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ToLLVMParser::ProgramContext::EOF() {
  return getToken(ToLLVMParser::EOF, 0);
}

ToLLVMParser::NamespaceDeclContext* ToLLVMParser::ProgramContext::namespaceDecl() {
  return getRuleContext<ToLLVMParser::NamespaceDeclContext>(0);
}

std::vector<ToLLVMParser::UseDeclContext *> ToLLVMParser::ProgramContext::useDecl() {
  return getRuleContexts<ToLLVMParser::UseDeclContext>();
}

ToLLVMParser::UseDeclContext* ToLLVMParser::ProgramContext::useDecl(size_t i) {
  return getRuleContext<ToLLVMParser::UseDeclContext>(i);
}

std::vector<ToLLVMParser::IncludeDeclContext *> ToLLVMParser::ProgramContext::includeDecl() {
  return getRuleContexts<ToLLVMParser::IncludeDeclContext>();
}

ToLLVMParser::IncludeDeclContext* ToLLVMParser::ProgramContext::includeDecl(size_t i) {
  return getRuleContext<ToLLVMParser::IncludeDeclContext>(i);
}

std::vector<ToLLVMParser::TopLevelDeclContext *> ToLLVMParser::ProgramContext::topLevelDecl() {
  return getRuleContexts<ToLLVMParser::TopLevelDeclContext>();
}

ToLLVMParser::TopLevelDeclContext* ToLLVMParser::ProgramContext::topLevelDecl(size_t i) {
  return getRuleContext<ToLLVMParser::TopLevelDeclContext>(i);
}


size_t ToLLVMParser::ProgramContext::getRuleIndex() const {
  return ToLLVMParser::RuleProgram;
}


std::any ToLLVMParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ToLLVMParserVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

ToLLVMParser::ProgramContext* ToLLVMParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, ToLLVMParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(113);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ToLLVMParser::NAMESPACE) {
      setState(112);
      namespaceDecl();
    }
    setState(118);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ToLLVMParser::USE) {
      setState(115);
      useDecl();
      setState(120);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(124);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ToLLVMParser::INCLUDE_SYS

    || _la == ToLLVMParser::INCLUDE_LOCAL) {
      setState(121);
      includeDecl();
      setState(126);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(130);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & -8761196412048) != 0) || ((((_la - 64) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 64)) & 10737419279) != 0)) {
      setState(127);
      topLevelDecl();
      setState(132);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(133);
    match(ToLLVMParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NamespaceDeclContext ------------------------------------------------------------------

ToLLVMParser::NamespaceDeclContext::NamespaceDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ToLLVMParser::NamespaceDeclContext::NAMESPACE() {
  return getToken(ToLLVMParser::NAMESPACE, 0);
}

tree::TerminalNode* ToLLVMParser::NamespaceDeclContext::IDENTIFIER() {
  return getToken(ToLLVMParser::IDENTIFIER, 0);
}

tree::TerminalNode* ToLLVMParser::NamespaceDeclContext::SEMI() {
  return getToken(ToLLVMParser::SEMI, 0);
}


size_t ToLLVMParser::NamespaceDeclContext::getRuleIndex() const {
  return ToLLVMParser::RuleNamespaceDecl;
}


std::any ToLLVMParser::NamespaceDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ToLLVMParserVisitor*>(visitor))
    return parserVisitor->visitNamespaceDecl(this);
  else
    return visitor->visitChildren(this);
}

ToLLVMParser::NamespaceDeclContext* ToLLVMParser::namespaceDecl() {
  NamespaceDeclContext *_localctx = _tracker.createInstance<NamespaceDeclContext>(_ctx, getState());
  enterRule(_localctx, 2, ToLLVMParser::RuleNamespaceDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(135);
    match(ToLLVMParser::NAMESPACE);
    setState(136);
    match(ToLLVMParser::IDENTIFIER);
    setState(137);
    match(ToLLVMParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UseDeclContext ------------------------------------------------------------------

ToLLVMParser::UseDeclContext::UseDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ToLLVMParser::UseDeclContext::getRuleIndex() const {
  return ToLLVMParser::RuleUseDecl;
}

void ToLLVMParser::UseDeclContext::copyFrom(UseDeclContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- UseItemContext ------------------------------------------------------------------

tree::TerminalNode* ToLLVMParser::UseItemContext::USE() {
  return getToken(ToLLVMParser::USE, 0);
}

ToLLVMParser::ModulePathContext* ToLLVMParser::UseItemContext::modulePath() {
  return getRuleContext<ToLLVMParser::ModulePathContext>(0);
}

tree::TerminalNode* ToLLVMParser::UseItemContext::SCOPE() {
  return getToken(ToLLVMParser::SCOPE, 0);
}

tree::TerminalNode* ToLLVMParser::UseItemContext::IDENTIFIER() {
  return getToken(ToLLVMParser::IDENTIFIER, 0);
}

tree::TerminalNode* ToLLVMParser::UseItemContext::SEMI() {
  return getToken(ToLLVMParser::SEMI, 0);
}

ToLLVMParser::UseItemContext::UseItemContext(UseDeclContext *ctx) { copyFrom(ctx); }


std::any ToLLVMParser::UseItemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ToLLVMParserVisitor*>(visitor))
    return parserVisitor->visitUseItem(this);
  else
    return visitor->visitChildren(this);
}
//----------------- UseGroupContext ------------------------------------------------------------------

tree::TerminalNode* ToLLVMParser::UseGroupContext::USE() {
  return getToken(ToLLVMParser::USE, 0);
}

ToLLVMParser::ModulePathContext* ToLLVMParser::UseGroupContext::modulePath() {
  return getRuleContext<ToLLVMParser::ModulePathContext>(0);
}

tree::TerminalNode* ToLLVMParser::UseGroupContext::SCOPE() {
  return getToken(ToLLVMParser::SCOPE, 0);
}

tree::TerminalNode* ToLLVMParser::UseGroupContext::LBRACE() {
  return getToken(ToLLVMParser::LBRACE, 0);
}

std::vector<tree::TerminalNode *> ToLLVMParser::UseGroupContext::IDENTIFIER() {
  return getTokens(ToLLVMParser::IDENTIFIER);
}

tree::TerminalNode* ToLLVMParser::UseGroupContext::IDENTIFIER(size_t i) {
  return getToken(ToLLVMParser::IDENTIFIER, i);
}

tree::TerminalNode* ToLLVMParser::UseGroupContext::RBRACE() {
  return getToken(ToLLVMParser::RBRACE, 0);
}

tree::TerminalNode* ToLLVMParser::UseGroupContext::SEMI() {
  return getToken(ToLLVMParser::SEMI, 0);
}

std::vector<tree::TerminalNode *> ToLLVMParser::UseGroupContext::COMMA() {
  return getTokens(ToLLVMParser::COMMA);
}

tree::TerminalNode* ToLLVMParser::UseGroupContext::COMMA(size_t i) {
  return getToken(ToLLVMParser::COMMA, i);
}

ToLLVMParser::UseGroupContext::UseGroupContext(UseDeclContext *ctx) { copyFrom(ctx); }


std::any ToLLVMParser::UseGroupContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ToLLVMParserVisitor*>(visitor))
    return parserVisitor->visitUseGroup(this);
  else
    return visitor->visitChildren(this);
}
ToLLVMParser::UseDeclContext* ToLLVMParser::useDecl() {
  UseDeclContext *_localctx = _tracker.createInstance<UseDeclContext>(_ctx, getState());
  enterRule(_localctx, 4, ToLLVMParser::RuleUseDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(160);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<ToLLVMParser::UseItemContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(139);
      match(ToLLVMParser::USE);
      setState(140);
      modulePath();
      setState(141);
      match(ToLLVMParser::SCOPE);
      setState(142);
      match(ToLLVMParser::IDENTIFIER);
      setState(143);
      match(ToLLVMParser::SEMI);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<ToLLVMParser::UseGroupContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(145);
      match(ToLLVMParser::USE);
      setState(146);
      modulePath();
      setState(147);
      match(ToLLVMParser::SCOPE);
      setState(148);
      match(ToLLVMParser::LBRACE);
      setState(149);
      match(ToLLVMParser::IDENTIFIER);
      setState(154);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == ToLLVMParser::COMMA) {
        setState(150);
        match(ToLLVMParser::COMMA);
        setState(151);
        match(ToLLVMParser::IDENTIFIER);
        setState(156);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(157);
      match(ToLLVMParser::RBRACE);
      setState(158);
      match(ToLLVMParser::SEMI);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ModulePathContext ------------------------------------------------------------------

ToLLVMParser::ModulePathContext::ModulePathContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> ToLLVMParser::ModulePathContext::IDENTIFIER() {
  return getTokens(ToLLVMParser::IDENTIFIER);
}

tree::TerminalNode* ToLLVMParser::ModulePathContext::IDENTIFIER(size_t i) {
  return getToken(ToLLVMParser::IDENTIFIER, i);
}

std::vector<tree::TerminalNode *> ToLLVMParser::ModulePathContext::SCOPE() {
  return getTokens(ToLLVMParser::SCOPE);
}

tree::TerminalNode* ToLLVMParser::ModulePathContext::SCOPE(size_t i) {
  return getToken(ToLLVMParser::SCOPE, i);
}


size_t ToLLVMParser::ModulePathContext::getRuleIndex() const {
  return ToLLVMParser::RuleModulePath;
}


std::any ToLLVMParser::ModulePathContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ToLLVMParserVisitor*>(visitor))
    return parserVisitor->visitModulePath(this);
  else
    return visitor->visitChildren(this);
}

ToLLVMParser::ModulePathContext* ToLLVMParser::modulePath() {
  ModulePathContext *_localctx = _tracker.createInstance<ModulePathContext>(_ctx, getState());
  enterRule(_localctx, 6, ToLLVMParser::RuleModulePath);
